--- a/crates/services/collection/Cargo.toml
+++ b/crates/services/collection/Cargo.toml
@@ -10,6 +10,7 @@ common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
+dependent-utils = { path = "../../utils/dependent" }
 dependent-models = { path = "../../models/dependent" }
 enums = { path = "../../enums" }
 media-models = { path = "../../models/media" }
