--- a/crates/services/statistics/Cargo.toml
+++ b/crates/services/statistics/Cargo.toml
@@ -13,6 +13,7 @@ hashbag = { workspace = true }
 itertools = { workspace = true }
 sea-orm = { workspace = true }
 supporting-service = { path = "../supporting" }
+tokio = { workspace = true }
 tracing = { workspace = true }
 
 [package.metadata.cargo-machete]
