--- a/crates/models/specific/Cargo.toml
+++ b/crates/models/specific/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+common-models = { path = "../common" }
 rust_decimal = { workspace = true }
+sea-orm = { workspace = true }
 serde = { workspace = true }
+serde_with = { workspace = true }
 strum = { workspace = true }
