feat(backend): do not use application cache for user workout revision

--- a/crates/resolvers/user/Cargo.toml
+++ b/crates/resolvers/user/Cargo.toml
@@ -10,4 +10,5 @@ database-models = { path = "../../models/database" }
 dependent-models = { path = "../../models/dependent" }
 media-models = { path = "../../models/media" }
 traits = { path = "../../traits" }
+user-models = { path = "../../models/user" }
 user-service = { path = "../../services/user" }
