--- a/crates/models/media/Cargo.toml
+++ b/crates/models/media/Cargo.toml
@@ -16,3 +16,6 @@ sea-orm = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
