--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,6 @@ env:
   GHCR_REGISTRY: ghcr.io
   DOCKER_USERNAME: ignisda
 
-permissions:
-  contents: write
-  packages: write
-
 jobs:
   pre-workflow-checks:
     runs-on: ubuntu-latest
@@ -29,6 +25,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
+          persist-credentials: false
       - name: Set outputs
         id: set_outputs
         uses: actions/github-script@v7
@@ -72,11 +69,14 @@ jobs:
       - pre-workflow-checks
     if: needs.pre-workflow-checks.outputs.should-release == 'true'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
       - name: Generate changelog
         id: changelog
         uses: metcalfc/changelog-generator@v4.3.1
@@ -102,6 +102,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: moonrepo/setup-toolchain@v0
         with:
           auto-install: true
@@ -138,6 +140,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: actions/download-artifact@v4
         with:
           name: templates
@@ -169,7 +173,7 @@ jobs:
             cargo-build-${{ runner.os }}-${{ matrix.platform.target }}-
       - name: Install cross
         if: ${{ matrix.platform.command == 'cross' }}
-        uses: taiki-e/cache-cargo-install-action@v2
+        uses: taiki-e/cache-cargo-install-action@caa6f48d18d42462f9c30df89e2b4f71a42b7c2c
         with:
           tool: cross
           git: https://github.com/cross-rs/cross
@@ -197,9 +201,13 @@ jobs:
       - build-backend
     if: needs.pre-workflow-checks.outputs.should-run == 'true'
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Download build artifact for docker
         uses: actions/download-artifact@v4
         with:
@@ -249,12 +257,16 @@ jobs:
       - build-docker
     if: needs.pre-workflow-checks.outputs.should-release == 'true'
     runs-on: ubuntu-20.04
+    permissions:
+      contents: write
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       MOON_TOOLCHAIN_FORCE_GLOBALS: true
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Setup Moon
         uses: moonrepo/setup-toolchain@v0
         with:
@@ -267,7 +279,9 @@ jobs:
       - name: Build plugin
         run: moon run kodi:build
       - name: Upload plugin to releases
-        run: gh release upload --clobber ${{ github.ref_name }} "tmp/script.ryot.zip"
+        env:
+          REF_NAME: ${{ github.ref_name }}
+        run: gh release upload --clobber "${REF_NAME}" "tmp/script.ryot.zip"
 
   deploy-docs:
     needs:
@@ -278,6 +292,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
