Add music tracking using YoutubeMusic (#1133)
* build(backend): add rustypipe deps

* feat(backend): start adding new source and lot

* feat(migrations): start adding new columns for youtube music

* feat(backend): add music fields

* fix(services/integration): return result correctly

* feat(backend): start working on new provider

* chore(frontend): start adding for youtube music

* feat(backend): allow changing music preferences

* fix(utils/common): add lot mapping for music

* chore(frontend): add new lot

* feat(providers): get youtube music search working

* feat(providers): allow getting music details

* feat(providers): get recommendations for music

* chore(services/miscellaneous): get correct service for metadata details

* feat(backend): save music specifics

* feat(frontend): display music details

* feat(backend): store youtube music album details

* feat(frontend): display overview of metadata group

* fix(providers): get correct album id

* feat: allow searching from youtube music albums

* refactor(backend): change name of struct

* feat(backend): store metadata group extra information

* feat(backend): remove stuff for metadata group

* feat(backend): store source url in the metadata itself

* feat(providers): select biggest images

* feat(backend): add source url to metadata group table

* chore(frontend): adapt to new gql schema

* fix(providers): get correct youtube music album id

* feat(backend): start storing person source url in database

* chore(frontend): adapt to new gql schema

* chore(frontend): add ytmusic as people search source

* feat(providers): support artist search for youtube music

* feat(providers): support artist details

* chore(backend): apply clippy lints

* feat(providers): get all related tracks to a yt-music artist

* refactor(backend): make the images field nullable for metadata group

* feat(backend): return more music specifics

* feat(frontend): display more music specifics

* refactor(models/media): add skip serial

--- a/crates/providers/Cargo.toml
+++ b/crates/providers/Cargo.toml
@@ -19,7 +19,6 @@ educe = { workspace = true }
 enums = { path = "../enums" }
 graphql_client = { workspace = true }
 hashbag = { workspace = true }
-isolang = { workspace = true }
 itertools = { workspace = true }
 media-models = { path = "../models/media" }
 paginate = { workspace = true }
@@ -28,6 +27,7 @@ reqwest = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 rust_iso3166 = { workspace = true }
+rustypipe = { workspace = true }
 scraper = { workspace = true }
 sea-orm = { workspace = true }
 serde = { workspace = true }
