build(backend): add new nest struct deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,7 @@ logs-wheel = "=0.3.1"
 markdown = "=1.0.0-alpha.21"
 mime_guess = "=2.0.5"
 nanoid = "=0.4.0"
+nest_struct = "=0.5.2"
 openidconnect = "=3.5.0"
 paginate = "=1.1.11"
 radarr-api-rs = "=3.0.1"
