--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -28,6 +28,7 @@ importer-models = { path = "../../models/importer" }
 indexmap = { workspace = true }
 itertools = { workspace = true }
 media-models = { path = "../../models/media" }
+nest_struct = { workspace = true }
 providers = { path = "../../providers" }
 reqwest = { workspace = true }
 rust_decimal = { workspace = true }
