--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,8 @@ resolver = "2"
 [workspace.dependencies]
 askama = "0.12.1"
 anyhow = "=1.0.93"
-apalis = { version = "=0.5.5", features = ["cron", "limit"] }
+apalis = { version = "=0.6.2", features = ["limit"] }
+apalis-cron = "=0.6.2"
 argon2 = "=0.6.0-pre.1"
 async-graphql = { version = "=7.0.11", features = [
     "chrono",
@@ -147,7 +148,7 @@ struson = { version = "=0.6.0", features = ["serde"] }
 reqwest = { version = "=0.12.9", features = ["json", "stream"] }
 tokio = { version = "=1.41.1", features = ["full"] }
 tokio-util = { version = "=0.7.12", features = ["codec"] }
-tower = { version = "=0.5.1", features = ["buffer"] }
+tower = "=0.5.1"
 tower-http = { version = "=0.6.2", features = ["catch-panic", "cors", "trace"] }
 tracing = { version = "=0.1.41", features = ["attributes"] }
 tracing-subscriber = "=0.3.19"
