--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
 		"@lukemorales/query-key-factory": "1.3.4",
 		"@mantine/carousel": "7.14.3",
 		"@mantine/charts": "7.14.3",
+		"@mantine/code-highlight": "7.14.3",
 		"@mantine/core": "7.14.3",
 		"@mantine/dates": "7.14.3",
 		"@mantine/form": "7.14.3",
