--- a/crates/utils/database/Cargo.toml
+++ b/crates/utils/database/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
-background = { path = "../../background" }
+background-models = { path = "../../models/background" }
 chrono = { workspace = true }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
