build(backend): add retry feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ resolver = "2"
 [workspace.dependencies]
 askama = "0.12.1"
 anyhow = "=1.0.93"
-apalis = { version = "=0.6.2", features = ["catch-panic", "limit"] }
+apalis = { version = "=0.6.2", features = ["catch-panic", "limit", "retry"] }
 apalis-cron = "=0.6.2"
 argon2 = "=0.6.0-pre.1"
 async-graphql = { version = "=7.0.11", features = [
