--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
 		"@lukemorales/query-key-factory": "1.3.4",
 		"@mantine/carousel": "7.14.3",
 		"@mantine/charts": "7.14.3",
+		"@mantine/code-highlight": "7.14.3",
 		"@mantine/core": "7.14.3",
 		"@mantine/dates": "7.14.3",
 		"@mantine/form": "7.14.3",
@@ -30,7 +31,6 @@
 		"@tabler/icons-react": "3.17.0",
 		"@tanstack/react-query": "5.62.2",
 		"@tanstack/react-query-devtools": "5.62.2",
-		"buffer": "6.0.3",
 		"clsx": "2.1.1",
 		"cookie": "1.0.2",
 		"crypto-js": "4.2.0",
@@ -54,7 +54,6 @@
 		"react-confirm": "0.3.0-7",
 		"react-dom": "18.3.1",
 		"react-virtuoso": "4.12.3",
-		"react-webcam": "7.2.0",
 		"recharts": "2.14.1",
 		"remix-routes": "1.7.7",
 		"remix-utils": "7.7.0",
