feat(backend): extract async function to sleep in tokio

--- a/crates/utils/common/Cargo.toml
+++ b/crates/utils/common/Cargo.toml
@@ -11,3 +11,4 @@ enum-models = { path = "../../models/enum" }
 env-utils = { path = "../env" }
 reqwest = { workspace = true }
 serde = { workspace = true }
+tokio = { workspace = true }
