--- a/crates/utils/specific/Cargo.toml
+++ b/crates/utils/specific/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+common-utils = { path = "../common" }
 database-models = { path = "../../models/database" }
 dependent-utils = { path = "../dependent" }
 enum-models = { path = "../../models/enum" }
 sea-orm = { workspace = true }
 supporting-service = { path = "../../services/supporting" }
-tokio = { workspace = true }
