--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
 		"@mantine/dates": "7.14.3",
 		"@mantine/form": "7.14.3",
 		"@mantine/hooks": "7.14.3",
+		"@mantine/modals": "7.14.3",
 		"@mantine/notifications": "7.14.3",
 		"@remix-pwa/sw": "3.0.10",
 		"@remix-pwa/worker-runtime": "2.1.4",
@@ -51,7 +52,6 @@
 		"mantine-datatable": "7.14.5",
 		"nanoid": "5.0.9",
 		"react": "18.3.1",
-		"react-confirm": "0.3.0-7",
 		"react-dom": "18.3.1",
 		"react-virtuoso": "4.12.3",
 		"recharts": "2.14.1",
