--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -8,6 +8,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
+mkdocs-badges = "^0.4.4"
 mkdocs-macros-plugin = "1.0.4"
 mkdocs-material = "9.3.1"
 mkdocs-awesome-pages-plugin = "2.9.2"
