--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,8 +48,8 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
-askama = "0.12.1"
-anyhow = "=1.0.93"
+askama = "=0.12.1"
+anyhow = "=1.0.95"
 apalis = { version = "=0.6.2", features = ["catch-panic", "limit", "retry"] }
 apalis-cron = "=0.6.2"
 argon2 = "=0.6.0-pre.1"
@@ -59,12 +59,12 @@ async-graphql = { version = "=7.0.13", features = [
     "log",
     "tracing",
 ] }
-async-graphql-axum = "=7.0.11"
+async-graphql-axum = "=7.0.13"
 async-trait = "=0.1.83"
-aws-sdk-s3 = { version = "=1.66.0", features = ["behavior-version-latest"] }
+aws-sdk-s3 = { version = "=1.67.0", features = ["behavior-version-latest"] }
 axum = { version = "=0.7.9", features = ["macros", "multipart"] }
 boilermates = "=0.3.0"
-chrono = "=0.4.38"
+chrono = "=0.4.39"
 chrono-tz = "=0.10.0"
 compile-time = "=0.2.0"
 const-str = "=0.5.7"
@@ -89,13 +89,13 @@ flate2 = "=1.0.35"
 futures = "=0.3.31"
 graphql_client = "=0.14.0"
 hashbag = "=0.1.12"
-http = "=1.1.0"
+http = "=1.2.0"
 indexmap = "=2.7.0"
 indoc = "=2.0.5"
 isolang = { version = "=2.4.0", features = ["list_languages"] }
-itertools = "=0.13.0"
+itertools = "=0.14.0"
 jsonwebtoken = { version = "=9.3.0", default-features = false }
-lettre = "=0.11.10"
+lettre = "=0.11.11"
 logs-wheel = "=0.3.1"
 markdown = "=1.0.0-alpha.21"
 mime_guess = "=2.0.5"
@@ -124,7 +124,7 @@ schematic = { version = "=0.17.7", features = [
     "validate",
     "yaml",
 ], default-features = false }
-scraper = "=0.21.0"
+scraper = "=0.22.0"
 sea-orm = { version = "=1.1.3", features = [
     "debug-print",
     "postgres-array",
@@ -138,19 +138,19 @@ sea-orm = { version = "=1.1.3", features = [
 ], default-features = false }
 sea-orm-migration = "=1.1.3"
 sea-query = "=0.32.1"
-serde = { version = "=1.0.215", features = ["derive"] }
-serde_json = "=1.0.133"
-serde_with = { version = "=3.11.0", features = ["chrono_0_4"] }
+serde = { version = "=1.0.217", features = ["derive"] }
+serde_json = "=1.0.134"
+serde_with = { version = "=3.12.0", features = ["chrono_0_4"] }
 serde-xml-rs = "=0.6.0"
 slug = "=0.1.6"
 sonarr-api-rs = "=3.0.0"
 sqlx = { version = "=0.8.2", default-features = false, features = ["postgres"] }
 strum = { version = "=0.26.3", features = ["derive"] }
 struson = { version = "=0.6.0", features = ["serde"] }
-reqwest = { version = "=0.12.9", features = ["json", "stream"] }
-tokio = { version = "=1.41.1", features = ["full"] }
-tokio-util = { version = "=0.7.12", features = ["codec"] }
-tower = "=0.5.1"
+reqwest = { version = "=0.12.12", features = ["json", "stream"] }
+tokio = { version = "=1.42.0", features = ["full"] }
+tokio-util = { version = "=0.7.13", features = ["codec"] }
+tower = "=0.5.2"
 tower-http = { version = "=0.6.2", features = ["catch-panic", "cors", "trace"] }
 tracing = { version = "=0.1.41", features = ["attributes"] }
 tracing-subscriber = "=0.3.19"
