--- a/crates/providers/Cargo.toml
+++ b/crates/providers/Cargo.toml
@@ -21,6 +21,7 @@ graphql_client = { workspace = true }
 hashbag = { workspace = true }
 itertools = { workspace = true }
 media-models = { path = "../models/media" }
+nest_struct = { workspace = true }
 paginate = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true }
