--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,7 +110,8 @@ regex = "=1.11.1"
 rust_decimal = "=1.36.0"
 rust_decimal_macros = "=1.36.0"
 rust_iso3166 = "=0.1.13"
-rustypipe = { git = "https://codeberg.org/ThetaDev/rustypipe.git", branch = "feat/user-history" }
+# TODO: Change to official release when it is published
+rustypipe = { git = "https://codeberg.org/ThetaDev/rustypipe.git", rev = "addeb82110" }
 schematic = { version = "=0.17.7", features = [
     "config",
     "env",
