--- a/crates/utils/dependent/Cargo.toml
+++ b/crates/utils/dependent/Cargo.toml
@@ -23,6 +23,7 @@ itertools = { workspace = true }
 media-models = { path = "../../models/media" }
 nanoid = { workspace = true }
 providers = { path = "../../providers" }
+rand = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 sea-orm = { workspace = true }
