New import strategy (#1175)
* feat(utils/dependent): start implementing new import strategy

* chore(services/importer): change order of attributes

* build(backend): add either deps

* feat(backend): start implementing new import function

* feat(utils/dependent): complete import refresh logic

* docs: add information about importing time

* feat(utils/dependent): move progress update to actual update processing

* refactor(utils/dependent): use match stmts

* chore(utils/dependent): better display of ids

* fix(utils/dependent): change sleep time according to the number of items to be imported

* chore(utils/dependent): log the sleep time computed

* feat(utils/dependent): shuffle metadata before starting import

* docs: give rough estimate of the time

* docs: increase rough estimate of importing time

* fix(frontend): use correct wording

* feat(frontend): add btns to drop anime/manga

* feat(frontend): change conditions under which we show change state buttons

* Revert "feat(frontend): change conditions under which we show change state buttons"

This reverts commit 525ca0277119d28f7a57faa41e0bceed595042f2.

* feat(frontend): handle cases for anime and manga

* refactor(frontend): change the variable name

* feat(migrations): add new column to track specifics partial state

* feat(backend): respect new column

* chore(backend): respect new metadata column

* fix(utils/dependent): sleep before starting processing

* chore(backend): remove retry from jobs

* chore(utils/dependent): remove all the fuckery i did

* chore(utils/dependent): remove more stuff

* refactor(utils/dependent): remove commit beforehand

* feat(utils/dependent): add final metadata update strategy

* feat(utils/dependent): exponential backoff to calculate sleep time

* fix(utils/dependent): calculate sleep time only when required

* feat(backend): remove useless new column for metadata

* build(backend): remove unused dep

* chore(utils/dependent): better wording for comments

* refactor(util

--- a/crates/utils/dependent/Cargo.toml
+++ b/crates/utils/dependent/Cargo.toml
@@ -20,13 +20,16 @@ fitness-models = { path = "../../models/fitness" }
 importer-models = { path = "../../models/importer" }
 itertools = { workspace = true }
 media-models = { path = "../../models/media" }
+migrations = { path = "../../migrations" }
 nanoid = { workspace = true }
 providers = { path = "../../providers" }
+rand = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 sea-orm = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+slug = { workspace = true }
 sqlx = { workspace = true }
 supporting-service = { path = "../../services/supporting" }
 tracing = { workspace = true }
