--- a/crates/services/exporter/Cargo.toml
+++ b/crates/services/exporter/Cargo.toml
@@ -12,6 +12,7 @@ common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-models = { path = "../../models/dependent" }
+dependent-utils = { path = "../../utils/dependent" }
 enum-models = { path = "../../models/enum" }
 itertools = { workspace = true }
 fitness-models = { path = "../../models/fitness" }
@@ -24,3 +25,7 @@ struson = { workspace = true }
 supporting-service = { path = "../supporting" }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
+tracing = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["tracing"]
