refactor(backend): rename crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ members = [
     "crates/models/database",
     "crates/models/dependent",
     "crates/models/enum",
+    "crates/models/external",
     "crates/models/fitness",
     "crates/models/importer",
     "crates/models/media",
-    "crates/models/specific",
     "crates/models/user",
     "crates/providers",
     "crates/resolvers/collection",
