--- a/crates/services/importer/Cargo.toml
+++ b/crates/services/importer/Cargo.toml
@@ -21,6 +21,7 @@ dependent-utils = { path = "../../utils/dependent" }
 enum_meta = { workspace = true }
 enum-models = { path = "../../models/enum" }
 env-utils = { path = "../../utils/env" }
+external-models = { path = "../../models/external" }
 external-utils = { path = "../../utils/external" }
 fitness-models = { path = "../../models/fitness" }
 flate2 = { workspace = true }
@@ -38,7 +39,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
 serde-xml-rs = { workspace = true }
-specific-models = { path = "../../models/specific" }
 supporting-service = { path = "../supporting" }
 tracing = { workspace = true }
 traits = { path = "../../traits" }
