--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,8 +109,7 @@ regex = "=1.11.1"
 rust_decimal = "=1.36.0"
 rust_decimal_macros = "=1.36.0"
 rust_iso3166 = "=0.1.13"
-# TODO: Change to official release when it is published
-rustypipe = { git = "https://codeberg.org/ThetaDev/rustypipe.git", rev = "addeb82110" }
+rustypipe = "=0.9.0"
 schematic = { version = "=0.17.8", features = [
     "config",
     "env",
