--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ members = [
     "crates/models/database",
     "crates/models/dependent",
     "crates/models/enum",
+    "crates/models/external",
     "crates/models/fitness",
     "crates/models/importer",
     "crates/models/media",
-    "crates/models/specific",
     "crates/models/user",
     "crates/providers",
     "crates/resolvers/collection",
@@ -43,28 +43,28 @@ members = [
     "crates/utils/dependent",
     "crates/utils/external",
     "crates/utils/env",
-    "crates/utils/specific",
 ]
 resolver = "2"
 
 [workspace.dependencies]
-askama = "0.12.1"
-anyhow = "=1.0.93"
+askama = "=0.12.1"
+anyhow = "=1.0.95"
 apalis = { version = "=0.6.2", features = ["catch-panic", "limit", "retry"] }
 apalis-cron = "=0.6.2"
 argon2 = "=0.6.0-pre.1"
-async-graphql = { version = "=7.0.11", features = [
+async-graphql = { version = "=7.0.13", features = [
     "chrono",
     "decimal",
     "log",
     "tracing",
 ] }
-async-graphql-axum = "=7.0.11"
+async-graphql-axum = "=7.0.13"
 async-trait = "=0.1.83"
-aws-sdk-s3 = { version = "=1.63.0", features = ["behavior-version-latest"] }
+aws-sdk-s3 = { version = "=1.67.0", features = ["behavior-version-latest"] }
+# TODO: Update when https://github.com/async-graphql/async-graphql/pull/1653 is merged
 axum = { version = "=0.7.9", features = ["macros", "multipart"] }
 boilermates = "=0.3.0"
-chrono = "=0.4.38"
+chrono = "=0.4.39"
 chrono-tz = "=0.10.0"
 compile-time = "=0.2.0"
 const-str = "=0.5.7"
@@ -89,13 +89,13 @@ flate2 = "=1.0.35"
 futures = "=0.3.31"
 graphql_client = "=0.14.0"
 hashbag = "=0.1.12"
-http = "=1.1.0"
+http = "=1.2.0"
 indexmap = "=2.7.0"
 indoc = "=2.0.5"
 isolang = { version = "=2.4.0", features = ["list_languages"] }
-itertools = "=0.13.0"
+itertools = "=0.14.0"
 jsonwebtoken = { version = "=9.3.0", default-features = false }
-lettre = "=0.11.10"
+lettre = "=0.11.11"
 logs-wheel = "=0.3.1"
 markdown = "=1.0.0-alpha.21"
 mime_guess = "=2.0.5"
@@ -109,8 +109,8 @@ regex = "=1.11.1"
 rust_decimal = "=1.36.0"
 rust_decimal_macros = "=1.36.0"
 rust_iso3166 = "=0.1.13"
-rustypipe = "0.7.2"
-schematic = { version = "=0.17.7", features = [
+rustypipe = "=0.9.0"
+schematic = { version = "=0.17.8", features = [
     "config",
     "env",
     "json",
@@ -124,8 +124,8 @@ schematic = { version = "=0.17.7", features = [
     "validate",
     "yaml",
 ], default-features = false }
-scraper = "=0.21.0"
-sea-orm = { version = "=1.1.1", features = [
+scraper = "=0.22.0"
+sea-orm = { version = "=1.1.3", features = [
     "debug-print",
     "postgres-array",
     "macros",
@@ -136,21 +136,21 @@ sea-orm = { version = "=1.1.1", features = [
     "with-rust_decimal",
     "with-uuid",
 ], default-features = false }
-sea-orm-migration = "=1.1.1"
-sea-query = "=0.32.0"
-serde = { version = "=1.0.215", features = ["derive"] }
-serde_json = "=1.0.133"
-serde_with = { version = "=3.11.0", features = ["chrono_0_4"] }
+sea-orm-migration = "=1.1.3"
+sea-query = "=0.32.1"
+serde = { version = "=1.0.217", features = ["derive"] }
+serde_json = "=1.0.134"
+serde_with = { version = "=3.12.0", features = ["chrono_0_4"] }
 serde-xml-rs = "=0.6.0"
 slug = "=0.1.6"
 sonarr-api-rs = "=3.0.0"
 sqlx = { version = "=0.8.2", default-features = false, features = ["postgres"] }
 strum = { version = "=0.26.3", features = ["derive"] }
 struson = { version = "=0.6.0", features = ["serde"] }
-reqwest = { version = "=0.12.9", features = ["json", "stream"] }
-tokio = { version = "=1.41.1", features = ["full"] }
-tokio-util = { version = "=0.7.12", features = ["codec"] }
-tower = "=0.5.1"
+reqwest = { version = "=0.12.12", features = ["json", "stream"] }
+tokio = { version = "=1.42.0", features = ["full"] }
+tokio-util = { version = "=0.7.13", features = ["codec"] }
+tower = "=0.5.2"
 tower-http = { version = "=0.6.2", features = ["catch-panic", "cors", "trace"] }
 tracing = { version = "=0.1.41", features = ["attributes"] }
 tracing-subscriber = "=0.3.19"
