--- a/crates/traits/Cargo.toml
+++ b/crates/traits/Cargo.toml
@@ -16,6 +16,7 @@ database-models = { path = "../models/database" }
 database-utils = { path = "../utils/database" }
 media-models = { path = "../models/media" }
 sea-orm = { workspace = true }
+supporting-service = { path = "../services/supporting" }
 tracing = { workspace = true }
 
 [package.metadata.cargo-machete]
