--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,7 +110,7 @@ regex = "=1.11.1"
 rust_decimal = "=1.36.0"
 rust_decimal_macros = "=1.36.0"
 rust_iso3166 = "=0.1.13"
-rustypipe = "=0.9.0"
+rustypipe = { git = "https://codeberg.org/ThetaDev/rustypipe.git", rev = "a72029ea5428351d" }
 schematic = { version = "=0.17.8", features = [
     "config",
     "env",
