--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -23,6 +23,7 @@
 		"@ryot/transactional": "workspace:*",
 		"@ryot/ts-utils": "workspace:*",
 		"@tabler/icons-react": "3.29.0",
+		"@tailwindcss/vite": "4.0.0",
 		"@unkey/api": "0.32.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
@@ -66,7 +67,6 @@
 		"@types/react-dom": "18.3.5",
 		"autoprefixer": "10.4.20",
 		"drizzle-kit": "0.30.2",
-		"postcss": "8.5.1",
 		"tailwindcss": "4.0.0",
 		"typescript": "5.7.3",
 		"typescript-remix-routes-plugin": "1.0.1",
