--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -13,7 +13,7 @@
 		"@paddle/paddle-node-sdk": "2.4.0",
 		"@radix-ui/react-label": "2.1.1",
 		"@radix-ui/react-slot": "1.1.1",
-		"@radix-ui/react-tooltip": "1.1.6",
+		"@radix-ui/react-tooltip": "1.1.7",
 		"@react-email/components": "0.0.32",
 		"@remix-run/node": "2.15.2",
 		"@remix-run/react": "2.15.2",
@@ -23,6 +23,7 @@
 		"@ryot/transactional": "workspace:*",
 		"@ryot/ts-utils": "workspace:*",
 		"@tabler/icons-react": "3.17.0",
+		"@tailwindcss/vite": "4.0.0",
 		"@unkey/api": "0.32.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
@@ -66,8 +67,7 @@
 		"@types/react-dom": "18.3.5",
 		"autoprefixer": "10.4.20",
 		"drizzle-kit": "0.30.2",
-		"postcss": "8.5.1",
-		"tailwindcss": "3.4.17",
+		"tailwindcss": "4.0.0",
 		"typescript": "5.7.3",
 		"typescript-remix-routes-plugin": "1.0.1",
 		"vite": "5.4.14",
