--- a/libs/ts-utils/package.json
+++ b/libs/ts-utils/package.json
@@ -8,6 +8,7 @@
 		"dayjs": "1.11.13",
 		"humanize-duration-ts": "2.1.1",
 		"lodash": "4.17.21",
+		"react-router": "7.1.3",
 		"tailwind-merge": "2.6.0",
 		"tiny-invariant": "1.3.3",
 		"zod": "3.24.1"
