--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -54,8 +54,7 @@
 		"tiny-invariant": "1.3.3",
 		"ts-pattern": "5.6.2",
 		"ufo": "1.5.4",
-		"zod": "3.24.1",
-		"zodix": "0.4.4"
+		"zod": "3.24.1"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "2.15.2",
