Allow random sorting in list pages (#1212)
* chore(models/media): change order of attributes

* feat(backend): allow sorting collection contents by random

* build(models/dependent): add uuid deps

* feat(models/dependent): add basic response struct

* build(services/cache): add uuid deps

* feat(services/cache): return the key when setting caches

* feat(backend): allow getting ids for cache keys

* build(backend): add `either` deps

* feat(services/cache): allow expiring cache key by id

* chore(backend): adapt to expiring cache correctly

* feat(backend): return cache key for recommendations

* feat(backend): add mutation to allow expiring cache by id

* feat(frontend): allow expiring user metadata recommendations by cache key

* refactor(backend): change location of cache key struct

* feat(backend): add new cache key and value to enums

* refactor(services/collection): do not handle edge case

* feat(backend): start caching collection contents

* feat(backend): return the collection content cache key id

* refactor(frontend): adapt to new gql schema

* perf(backend): box dat value

* feat(frontend): display the number of items

* feat(backend): also return the total number of items in the collection

* chore(frontend): use correct param to display collection total items

* feat(frontend): allow refreshing collection results

* chore(backend): add cache keys for metadata list

* feat(utils/dependent): start caching metadata list

* feat(backend): cache the metadata list response

* chore(frontend): adapt to new gql schema

* refactor(frontend): common component for refresh button

* feat(frontend): display refresh button

* feat(backend): allow ordering metadata list by random

* refactor(backend): change name of query

* chore(frontend): adapt to new gql schema

* refactor(backend): change name of people list query

* refactor(backend): change name of metadata groups list query

* chore(frontend): adapt to new gql schema

* refactor(backend): change name of exe

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ educe = { version = "=0.6.0", features = [
     "Default",
     "full",
 ], default-features = false }
+either = "=1.13.0"
 enum_meta = "=0.7.0"
 eventsource-stream = "=0.2.3"
 flate2 = "=1.0.35"
@@ -110,7 +111,7 @@ rust_decimal = "=1.36.0"
 rust_decimal_macros = "=1.36.0"
 rust_iso3166 = "=0.1.13"
 # TODO: Update when https://codeberg.org/ThetaDev/rustypipe/issues/25 is merged
-rustypipe = { git = "https://codeberg.org/ThetaDev/rustypipe.git", rev = "a72029ea5428351d" }
+rustypipe = { git = "https://codeberg.org/ThetaDev/rustypipe.git", rev = "19e1428679" }
 schematic = { version = "=0.17.8", features = [
     "config",
     "env",
