feat(website): upgrade to react router v7

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["**/*.ts", "**/*.tsx", ".react-router/types/**/*"],
 	"compilerOptions": {
 		"lib": ["DOM", "DOM.Iterable", "ES2022"],
 		"isolatedModules": true,
@@ -22,6 +22,8 @@
 			"~/*": ["./app/*"],
 			"@ryot/transactional/*": ["../../libs/transactional/*"]
 		},
+		"rootDirs": [".", "./.react-router/types"],
+		"types": ["@react-router/node", "vite/client"],
 		"skipLibCheck": true,
 		"noEmit": true,
 		"outDir": "../../.moon/cache/types/apps/website",
