--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -15,9 +15,9 @@
 		"@radix-ui/react-slot": "1.1.1",
 		"@radix-ui/react-tooltip": "1.1.7",
 		"@react-email/components": "0.0.32",
-		"@remix-run/node": "2.15.2",
-		"@remix-run/react": "2.15.2",
-		"@remix-run/serve": "2.15.2",
+		"@react-router/fs-routes": "7.1.3",
+		"@react-router/node": "^7.0.0",
+		"@react-router/serve": "^7.0.0",
 		"@ryot/generated": "workspace:*",
 		"@ryot/graphql": "workspace:*",
 		"@ryot/transactional": "workspace:*",
@@ -46,6 +46,7 @@
 		"postgres": "3.4.5",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-router": "^7.0.0",
 		"remix-routes": "1.7.7",
 		"remix-utils": "7.7.0",
 		"sonner": "1.7.2",
@@ -57,7 +58,7 @@
 		"zod": "3.24.1"
 	},
 	"devDependencies": {
-		"@remix-run/dev": "2.15.2",
+		"@react-router/dev": "^7.0.0",
 		"@tailwindcss/typography": "0.5.16",
 		"@types/crypto-js": "4.2.2",
 		"@types/lodash": "4.17.14",
@@ -69,7 +70,7 @@
 		"tailwindcss": "4.0.0",
 		"typescript": "5.7.3",
 		"typescript-remix-routes-plugin": "1.0.1",
-		"vite": "5.4.14",
+		"vite": "6.0.11",
 		"vite-tsconfig-paths": "5.1.4"
 	},
 	"engines": {
