--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -47,8 +47,8 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-router": "7.1.3",
-		"remix-routes": "1.7.7",
 		"remix-utils": "7.7.0",
+		"safe-routes": "1.0.3",
 		"sonner": "1.7.2",
 		"tailwind-merge": "2.6.0",
 		"tailwindcss-animate": "1.0.7",
@@ -69,7 +69,6 @@
 		"drizzle-kit": "0.30.3",
 		"tailwindcss": "4.0.0",
 		"typescript": "5.7.3",
-		"typescript-remix-routes-plugin": "1.0.1",
 		"vite": "6.0.11",
 		"vite-tsconfig-paths": "5.1.4"
 	},
