--- a/crates/services/supporting/Cargo.toml
+++ b/crates/services/supporting/Cargo.toml
@@ -15,6 +15,7 @@ common-utils = { path = "../../utils/common" }
 config = { path = "../../config" }
 dependent-models = { path = "../../models/dependent" }
 enum-models = { path = "../../models/enum" }
+enum_meta = { workspace = true }
 env-utils = { path = "../../utils/env" }
 file-storage-service = { path = "../../services/file-storage" }
 isolang = { workspace = true }
